--- a/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
+++ b/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
@@ -178,5 +178,53 @@ Los div no reciben foco porque son un elemento presentacional, no esperan ningun
 > Para avanzar en una web usar `Tab` y para retroceder `Shift + Tab`.
 > Para cambiar entre pestañas de Izquierda a Derecha es: **Ctrl + tab** Para ir de Derecha a Izquierda es: **Ctrl + shift + tab**
 
+## 11. Pruebas manuales con lectores de pantalla
 
+- Lectores de Pantalla: Software que mapea las páginas que usamos y las lee en voz alta.
+
+Combinaciones de lectores de pantalla y navegadores:
+
+- NVDA - Mozilla Firefox 
+- JAWS - Internet Explorer 
+- VoiceOver - Safari 
+- ChromeVox - Google Chrome
+
+En los DevTools, podemos ver un árbol de todo lo que va a leer o interpretar el lector de pantalla.
+
+![tree](https://i.postimg.cc/HxpJjfXB/11-accessibility-tree.png)
+
+Una gran herramienta complemento para los lectores de pantalla es **ANDY** que no permite corregir nuestro código y hacer pruebas muy fáciles! [Andi](https://www.ssa.gov/accessibility/andi/help/install.html)
+
+## 12. Pruebas manuales con VoiceOver
+
+En Linux mint:
+
+- Encender: **alt + super/window + s**
+- Apagar: Una pesadilla, hay que reiniciar la pc para que **Orca** deje de funcionar XD
+
+## 13. ¿Qué es el HTML semántico y por qué es importante?
+
+El HTML semántico nos ayuda con algunos aspectos de presentación y le agrega significado a nuestro contenido en el navegador.
+
+Sin HTML semántico:
+
+```html
+<div>
+  <div>
+    <div></div>
+  </div>
+</div>
+```
+
+Con HTML semántico:
+
+```html
+<header></header>
+<main>
+  <article><img src="" alt="" /></article>
+</main>
+<footer></footer>
+```
+
+## 14. 
 📌
