--- a/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
+++ b/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
@@ -226,5 +226,76 @@ Con HTML semántico:
 <footer></footer>
 ```
 
-## 14. 
+## 14. Usando HTML semántico en el header de nuestro sitio
+
+### HTML4: Lots of Classes/IDs
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Blog</title>
+</head>
+<body>
+    <div id="header">
+        <!-- Contenido del header -->
+    </div>
+    <div id="content">
+        <div class="post">
+            <!-- Contenido del primer post -->
+        </div>
+        <div class="post">
+            <!-- Contenido del segundo post -->
+        </div>
+        <div class="post">
+            <!-- Contenido del tercer post -->
+        </div>
+    </div>
+    <div id="sidebar">
+        <!-- Contenido del sidebar -->
+    </div>
+    <div id="footer">
+        <!-- Contenido del footer -->
+    </div>
+</body>
+</html>
+```
+
+### HTML5: Semantic Tags/Sections
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Blog</title>
+</head>
+<body>
+    <header>
+        <!-- Contenido del header -->
+    </header>
+    <nav>
+        <!-- Contenido del nav -->
+    </nav>
+    <main>
+        <article>
+            <!-- Contenido del primer artículo -->
+        </article>
+        <article>
+            <!-- Contenido del segundo artículo -->
+        </article>
+        <article>
+            <!-- Contenido del tercer artículo -->
+        </article>
+    </main>
+    <footer>
+        <!-- Contenido del footer -->
+    </footer>
+</body>
+</html>
+```
+
+El código de HTML5 utiliza etiquetas semánticas que proporcionan un significado claro a las distintas partes del documento, mejorando la accesibilidad y el SEO. Las etiquetas como `<header>`, `<nav>`, `<main>`, `<article>` y `<footer>` son más descriptivas que los contenedores genéricos `<div>`.
+
+## 15.
+
 📌
