--- a/DW/2-intermedio/028.accesibilidad/0.audiocurso-accesibilidad-web.md
+++ b/DW/2-intermedio/028.accesibilidad/0.audiocurso-accesibilidad-web.md
@@ -105,16 +105,7 @@ NOTA: hay que evitar usar excesivamente atributos “aria” a las etiquetas inn
 
 2. ¿Cuál es el mejor texto alternativo de un logo que se usa como enlace para volver a la página de inicio?
 
-	- 
-
-a ✅ mal
-El nombre de la empresa.
-
-b quizá 
-Ir la inicio.
-
-c
-Logo.
+	- ✅ Ir la inicio.
 
 3. ¿Qué podemos hacer si el estilo del foco predeterminado de los navegadores no le gusta a mi cliente?
 
@@ -154,18 +145,7 @@ Logo.
 
 12. Según la Organización Mundial de la Salud, ¿qué porcentaje de personas en el mundo sufren de algún tipo de discapacidad?
 
-
-a ✅ mal
-20%
-
-b quizá
-15%
-
-c
-8%
-
-d
-12%
+	- ✅ 15%
 
 13. ¿Qué debemos buscar para saber si el contraste de dos colores es aceptable?
 
@@ -181,6 +161,49 @@ d
 15. ¿Podemos usar nuestro design system como un paquete de NPM común y corriente?
 
 	- ✅ Verdadero
+
+16. ¿Cuál es la primera regla de ARIA?
+
+	- ✅ No usar ARIA.
+
+17. ¿Quién debe encargarse de desarrollar el design system?
+
+a ✅ mal
+Todos los equipos. Debe ser un trabajo en conjunto.
+
+b
+El equipo de diseño.
+
+c
+El equipo de QA.
+
+d
+El equipo de desarrollo.
+
+18. ¿Cuál de las siguientes es una discapacidad temporal?
+
+	- ✅ Tener una mano enyesada durante un par de semanas.
+
+19. ¿Qué herramienta usarías si buscas MUCHO detalle sobre la semántica de tu sitio web?
+Elige la respuesta correcta
+
+
+a
+axe
+
+b ✅ mal
+Lighthouse o Web.dev
+
+c
+WAVE
+
+20. ¿Es correcto usar un atributo `alt` vacío en imágenes decorativas `(alt="")`?
+
+	- ✅ Verdadero
+
+21. ¿Cuál de las siguientes estrategias NO ayuda a personas con dislexia?
+
+	- ✅ Armando pocos párrafos con mucho texto.
 
 </details>
 
