--- a/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
+++ b/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
@@ -296,6 +296,22 @@ Con HTML semántico:
 
 El código de HTML5 utiliza etiquetas semánticas que proporcionan un significado claro a las distintas partes del documento, mejorando la accesibilidad y el SEO. Las etiquetas como `<header>`, `<nav>`, `<main>`, `<article>` y `<footer>` son más descriptivas que los contenedores genéricos `<div>`.
 
-## 15.
+## 15. Usando HTML semántico en el contenido principal de nuestro sitio
+
+```html
+<header>
+  @code
+</header>
+
+<main>
+  @code
+</main>
+
+<footer>
+  @code
+</footer>
+```
+
+## 16. Usando HTML semántico en footer de nuestro sitio
 
 📌
