--- a/DW/2-intermedio/028.accesibilidad/0.audiocurso-accesibilidad-web.md
+++ b/DW/2-intermedio/028.accesibilidad/0.audiocurso-accesibilidad-web.md
@@ -171,7 +171,7 @@ NOTA: hay que evitar usar excesivamente atributos “aria” a las etiquetas inn
 a ✅ mal
 Todos los equipos. Debe ser un trabajo en conjunto.
 
-b
+b quizá
 El equipo de diseño.
 
 c
@@ -188,7 +188,7 @@ El equipo de desarrollo.
 Elige la respuesta correcta
 
 
-a
+a quizá 
 axe
 
 b ✅ mal
