--- a/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
+++ b/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
@@ -226,6 +226,14 @@ Con HTML semántico:
 <footer></footer>
 ```
 
+Para revisar si una etiqueta puede ir dentro de otra, podemos usar:
+
+[CanInclude](https://caninclude.glitch.me/)
+
+Además, podemos prácticar los diferentes casos que puede presentar una revisión de accesibilidad.
+
+[Accessibility exercises](https://www.unimelb.edu.au/accessibility/exercises)
+
 ## 14. Usando HTML semántico en el header de nuestro sitio
 
 ### HTML4: Lots of Classes/IDs
@@ -313,5 +321,79 @@ El código de HTML5 utiliza etiquetas semánticas que proporcionan un significad
 ```
 
 ## 16. Usando HTML semántico en footer de nuestro sitio
+
+## 17. ARIA - Accessible Rich Internet Applications
+
+ARIA (Accessible Rich Internet Applications): Un conjunto de atributos especiales para accesibilidad que pueden añadirse a cualquier etiqueta, pero especialmente adaptado a HTML.
+
+Fue creado por el W3C, lo crearon para que podamos comunicar cambios especiales en nuestras aplicaciones.
+
+**Atributos de ARIA: **
+
+- Roles
+- Propiedades
+- Estados
+
+## 18. ARIA roles
+
+Roles de ARIA: Define el tipo general del objeto (como un artículo, una alerta o un deslizador)
+
+Los roles le comunican al navegador cuáles son las interacciones que debería esperar y cómo se va a usar este objeto en nuestro proyecto. Se usan en situaciones muy específicas, es mejor depender del HTML semántico para comunicar los roles.
+
+📌 Entonces, hay que usar los roles solamente cuando el HTML semántico se nos queda corto para dar accesibilidad a lo que tenemos.
+
+Un buen ejemplo de cuándo utilizar los ARIA roles es con los emojis 🚀 que deben de quedar así:
+
+```html
+<span role="img" aria-label="emoji de cohete">🚀</span>
+```
+
+[ARIA roles documentación](https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles)
+
+## 19. ARIA properties
+
+Propiedades de ARIA: Comunican atributos que son esenciales para el comportamiento o significado de un elemento pero que suelen comunicar visualmente.
+
+`Atributo: "aria-label"`
+
+Estas propiedades ARIA la vamos a usar más seguido.
+
+### ARIA label
+
+- Podemos usar para agregar un string para describir un elemento de nuestro código
+- Aria Ejemplo:
+
+```html
+<form class="form-container">
+  Nombre<input type="text" aria-label="nombre" /> <br />
+  Correo<input type="text" aria-label="correo" /> <br />
+  <div class="message-input">Mensaje<input type="text" /> <br /></div>
+  <button class="send-button">Enviar</button>
+</form>
+```
+
+[Accessible Rich Internet Applications (WAI-ARIA) 1.2](https://www.w3.org/TR/wai-aria/)
+
+## 20. ARIA states
+
+Estados de ARIA: Comunican estados y cambios de estados en elementos que se suelen comunicar visualmente.
+
+Añadimos a la etiqueta de `<li>` el atributo: `aria-hidden="true"` para que el lector de pantalla solo lea los elementos
+
+```html
+<li aria-hidden="true">...</li>
+```
+
+[ARIA labels and relationships](https://web.dev/articles/aria-labels-and-relationships)
+
+## 21. Overview del proyecto con los retos resueltos
+
+## 22. Contrastes de color
+
+Ver el contraste entre el fondo y el texto, solo selecciona `color`:
+
+![Ver color](https://i.postimg.cc/bN1y9rzd/22-color-aaa.png)
+
+Esto nos indicará a qué nivel de WCAG estaremos llegando A, AA o AAA.
 
 📌
