--- a/DW/2-intermedio/028.accesibilidad/0.audiocurso-accesibilidad-web.md
+++ b/DW/2-intermedio/028.accesibilidad/0.audiocurso-accesibilidad-web.md
@@ -168,34 +168,15 @@ NOTA: hay que evitar usar excesivamente atributos “aria” a las etiquetas inn
 
 17. ¿Quién debe encargarse de desarrollar el design system?
 
-a ✅ mal
-Todos los equipos. Debe ser un trabajo en conjunto.
-
-b quizá
-El equipo de diseño.
-
-c
-El equipo de QA.
-
-d
-El equipo de desarrollo.
+	- ✅ El equipo de diseño.
 
 18. ¿Cuál de las siguientes es una discapacidad temporal?
 
 	- ✅ Tener una mano enyesada durante un par de semanas.
 
 19. ¿Qué herramienta usarías si buscas MUCHO detalle sobre la semántica de tu sitio web?
-Elige la respuesta correcta
 
-
-a quizá 
-axe
-
-b ✅ mal
-Lighthouse o Web.dev
-
-c
-WAVE
+	- ✅ axe
 
 20. ¿Es correcto usar un atributo `alt` vacío en imágenes decorativas `(alt="")`?
 
@@ -205,6 +186,14 @@ WAVE
 
 	- ✅ Armando pocos párrafos con mucho texto.
 
+22. ¿Qué se considera un contraste aceptable?
+
+	- ✅ Un tamaño de fuente de 14px en negrita y un contraste de nivel AA.
+
+23. ¿Cómo rellena Facebook los atributos `alt` de sus imágenes?
+
+	- ✅ Inteligencia artificial.
+ 
 </details>
 
 ✅ 
