--- a/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
+++ b/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
@@ -396,4 +396,187 @@ Ver el contraste entre el fondo y el texto, solo selecciona `color`:
 
 Esto nos indicará a qué nivel de WCAG estaremos llegando A, AA o AAA.
 
+Además, si los colores no cumplen con el estándar podremos ver que colores son apropiados para este caso:
+
+![](https://i.postimg.cc/bYL8Vb3J/22-bad-color.png)
+
+Si te fijas en la sección para elegir colores podremos ver dos líneas que forman una especie de **canal**. Si eliges colores que están por encima de este, seguirás sin cumplir el estándar mínimo.
+
+Si eliges colores que están dentro de estas dos líneas, cumplirás el estándar **AA**, pero si quieres ir más allá puedes elegir colores por debajo de estas líneas para cumplir el estándar **AAA**.
+
+![](https://i.postimg.cc/Y9KnxXJP/22-good-color.png)
+
+## 23. Iconos
+
+- Pensamos que los iconos son universales, pero pueden ser confusos si nunca los has visto o dependiendo de la aplicación que estás usando.
+- Para comunicar de una manera más eficiente se podría agregar un texto especificando el icono.
+
+**RESUMEN:** Los iconos pueden llegar a ser confusos en algunos casos con personas con discapacidades para solucionar esta problemática es importante especificar un texto
+
+![icons](https://i.postimg.cc/j5CsTS8N/23-icons.webp)
+
+## 24. Skip Links
+
+Son enlaces de página internos que ayudan a la navegación por la página actual, en lugar de a páginas completamente nuevas.
+
+A simple vista no se ven, pero al momento que un software de lectura de texto los detecta aparecen.
+
+Se crean poniendo un enlace común y corriente:
+
+```css
+<a href="#main" id="skip-link">Saltar al contenido</a>
+
+<main id="main">
+  <section>
+    <p>Content...</p>
+  </section>
+</main>
+```
+
+Y en CSS le pondremos lo siguiente:
+
+```css
+.skip-link {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  transition: top 0.3s;
+  height: 0;
+  /* desaparecemos el botón a simple vista*/
+}
+
+.skip-link:focus,
+.skip-link:active {
+  top: 0;
+  background.. 
+  font ... 
+}
+/* de esta forma cuando navegen con un teclado este aparecerá*/
+```
+
+Usando `Tab` aparece.
+
+[Skip link](https://a11y-101.com/development/skip-link)
+
+## 25. Estilos de foco y hover
+
+En CSS, `:focus` y `:focus-within` son pseudoclases que se utilizan para aplicar estilos específicos cuando un elemento (o sus descendientes, en el caso de `:focus-within`) recibe el foco, que generalmente ocurre cuando un usuario interactúa con él mediante el teclado, el ratón u otro dispositivo de entrada.
+
+### `:focus`
+
+La pseudoclase `:focus` se aplica a un elemento que actualmente tiene el foco. Esto es útil para mejorar la accesibilidad y la usabilidad al resaltar el elemento que está activo o seleccionado, lo que proporciona una mejor experiencia para los usuarios que navegan mediante el teclado o dispositivos de asistencia.
+
+**Ejemplo de uso:**
+
+```css
+a:focus {
+  outline: 2px solid #00f; /* Añade un borde azul al enlace enfocado */
+  background-color: #ff0; /* Cambia el fondo a amarillo cuando el enlace está enfocado */
+}
+```
+
+**HTML:**
+
+```html
+<a href="#section1">Ir a la Sección 1</a>
+<a href="#section2">Ir a la Sección 2</a>
+```
+
+También puedes aplicar un `outline: none` aunque esto perjudica la accesibilidad.
+
+### `:focus-within`
+
+La pseudoclase `:focus-within` se aplica a un elemento si dicho elemento o cualquier descendiente de este elemento tiene el foco. Es útil para resaltar contenedores completos que contienen elementos interactivos cuando cualquiera de esos elementos recibe el foco.
+
+**Ejemplo de uso:**
+
+```css
+form:focus-within {
+  border: 2px solid #00f; /* Añade un borde azul al formulario cuando cualquier elemento dentro de él tiene el foco */
+  background-color: #e0f7fa; /* Cambia el fondo a un color claro cuando el formulario o cualquier campo dentro de él tiene el foco */
+}
+```
+
+**HTML:**
+
+```html
+<form>
+  <label for="name">Nombre:</label>
+  <input type="text" id="name" name="name">
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email">
+  <button type="submit">Enviar</button>
+</form>
+```
+
+### Uso en accesibilidad
+
+- **Visualización clara:** Usar `:focus` y `:focus-within` asegura que los usuarios puedan ver claramente qué elemento tiene el foco, lo que es crucial para aquellos que navegan con el teclado o utilizan lectores de pantalla.
+  
+- **Navegación de teclado:** Al proporcionar estilos específicos para los elementos enfocados, los usuarios de teclado pueden navegar mejor y más eficientemente a través de la interfaz, sabiendo siempre cuál es el elemento activo.
+
+- **Interacción mejorada:** Para formularios y áreas interactivas, `:focus-within` puede mejorar la usabilidad al resaltar secciones enteras cuando uno de sus elementos recibe el foco, ayudando a los usuarios a entender mejor el contexto de su interacción.
+
+### Ejemplo práctico combinando `:focus` y `:focus-within`
+
+```css
+/* Estilos para enlaces enfocados */
+a:focus {
+  outline: 2px dashed #00f;
+  background-color: #ff0;
+}
+
+/* Estilos para contenedores que tienen elementos enfocados dentro */
+.nav-item:focus-within {
+  background-color: #e0f7fa;
+}
+```
+
+**HTML:**
+
+```html
+<nav>
+  <div class="nav-item">
+    <a href="#home">Inicio</a>
+  </div>
+  <div class="nav-item">
+    <a href="#about">Acerca de</a>
+  </div>
+  <div class="nav-item">
+    <a href="#contact">Contacto</a>
+  </div>
+</nav>
+```
+
+En este ejemplo, cuando un enlace dentro de `.nav-item` recibe el foco, tanto el enlace como el contenedor `.nav-item` cambian de estilo, mejorando la accesibilidad y usabilidad para los usuarios.
+
+[:focus-within](https://developer.mozilla.org/en-US/docs/Web/CSS/:focus-within)
+
+## 26. Overview retos resueltos con CSS
+
+El orden de las propiedades dentro de los selectores si importa y tienen un orden sugerido (Curso Diego D. Granda):
+
+1. Position
+2. Modelo de caja
+3. Texto
+4. color
+5. Miscelanea
+
+## 27. Manejando el foco del teclado - botones
+
+Debes usar la etiqueta `<button></button>` para crear una interacción.
+
+## 28. Manejando el foco del teclado - el carousel
+
+Tabindex: Indica si su elemento puede ser enfocado, y si participa en la navegación secuencial del teclado.
+
+Valores de Tabindex:
+
+- Valor negativo(-1): El elemento debe ser enfocado, pero no debe de ser accesible a través de la navegación.
+- Valor positivo (>0): Debe poder ser enfocado y su orden relativo es definido por el valor del atributo.
+- Valor de 0: Debe ser enfocado y ser accesible a través de la navegación secuencial del teclado, pero su orden relativo es definido por convención de la plataforma.
+
+- 👉📖 [Artículo de tab index por google developers](https://developers.google.com/web/fundamentals/accessibility/focus/using-tabindex?hl=es)
+- [HTML `tabindex` attribute](https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/tabindex)
+## 29. 
 📌
