--- a/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
+++ b/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
@@ -578,5 +578,55 @@ Valores de Tabindex:
 
 - 👉📖 [Artículo de tab index por google developers](https://developers.google.com/web/fundamentals/accessibility/focus/using-tabindex?hl=es)
 - [HTML `tabindex` attribute](https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/tabindex)
-## 29. 
+
+## 29. Coordinando el foco del teclado con el foco de lectores de pantallas
+
+Ver clase 28 y 29.
+
+- [Clase 28](https://platzi.com/home/clases/1802-accesibilidad-web/26087-manejando-el-foco-del-teclado-el-carousel/)
+- [Clase 29](https://platzi.com/home/clases/1802-accesibilidad-web/26088-coordinando-el-foco-del-teclado-con-el-foco-de-lec/)
+
+**[carrusel 100% accesible](https://github.com/BrandonArgel/blog/blob/main/src/components/Slideshow/index.tsx)**
+
+## 30. Manejando modales
+
+Un modal siempre debería tener tres salidas (a mi modo de ver): 
+
+- El botón de cerrar
+- Clic fuera del modal para que se cierre
+- Con la tecla **Esc** del teclado
+
+## 31. Mejorando la accesibilidad con teclado de nuestro modal
+
+[JavaScript Key Code](https://www.toptal.com/developers/keycode)
+
+## 32. Ayudando a nuestros usuarios a interactuar correctamente con el sitio
+
+- La 3° Ley de WCAG ⇒ "Ser comprensible"
+- Debemos esforzarnos, para que todas las acciones sean fáciles de entender.
+- Nuestras acciones deben ser **predecibles** es decir que estemos usando patrones que se usan en otras aplicaciones, otros contextos para unas mismas acciones.
+
+## 33. Validando formularios
+
+[Atributo required](https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes/required)
+
+## 34. Manejando cambios dinámicos
+
+**aria-live:** Se utilizan para establecer la prioridad con la que el lector de pantalla debe tratar a cambios a las regiones en vivo - los valores posibles son: off, politeo assertive. La configuración predeterminada es off. Este atributo es, con mucho, el más importante.
+
+Rarísimo, pero en Orca para que funcione el `aria-live` con la notificación, tuve que encerrar la misma en un div adicional, de manera que quedara así:
+
+```html
+<div aria-live="assertive">
+  <div class="notification"></div>
+</div>
+```
+
+En cambio, para el mensaje de error debajo del campo funcionó tal cual el ejemplo en el video.
+
+## 35. Siguientes pasos
+
+Repetir curso...
+
+
 📌
