--- a/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
+++ b/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
@@ -628,5 +628,110 @@ En cambio, para el mensaje de error debajo del campo funcionó tal cual el ejemp
 
 Repetir curso...
 
+## Examen 📌
+<details>
+	<summary>Haz clic para ver los resultados 👀</summary>
+	<br/>
 
+1. ¿Cuál atributo de `aria` podemos usar para comunicar cambios dinámicos?
+
+	- ✅ aria-live
+	- aria-hidden
+	- aria-atomic
+	- aria-label
+
+2. ¿Qué hace un skip link?
+
+	- ✅ Ofrece la opción de saltar al contenido directamente.
+
+3. ¿Cómo se llama la iniciativa que se encarga de los estándares de accesibilidad de la web?
+
+	- ✅ WAI - Web Accessibility Initiative
+
+4. El HTML semántico nos ayuda con aspectos de presentación y de significado de nuestro contenido.
+
+	- ✅ Verdadero
+
+5. ¿Para qué usamos ARIA?
+
+	- ✅ Para extender la accesibilidad de nuestro HTML.
+
+6. La accesibilidad es un framework.
+
+	- ✅ Falso
+
+7. ¿Cuál combinacion de teclas usamos para movernos hacia atrás con el teclado?
+
+	- ✅ Shift + Tab
+
+8. Las tecnologías asistivas son hardware y software.
+
+	- ✅ Verdadero
+
+9. Bajo WCAG, ¿cuál es el mínimo contraste para nivel AA?
+
+	- ✅ 4.5:1
+
+10. ¿Cuál combinación de teclas usamos para movernos hacia adelante con ChromeVox?
+
+	- ✅ Control + Command + Flecha abajo.
+
+11. ¿Cuál es la importancia de validar formularios?
+
+	- ✅ Comunicar errores y dar oportunidades para corregirlos.
+
+12. ¿Para qué usamos el atributo aria-hidden?
+
+	- ✅ Para esconder un elemento de lectores de pantalla.
+
+13. ¿Cuál función de JavaScript llamamos para enfocar un elemento?
+
+	- ✅ `.focus()`
+
+14. ¿Cómo deberíamos estructurar el HTML de una navegación?
+
+	- ✅  
+	```html
+	<nav>
+	    <ul>
+	        <li>
+	```
+
+15. ¿Quién es el mantenedor de Lighthouse?
+
+	- ✅ Google
+
+16. ¿Cuál lector de pantalla funciona mejor con Safari?
+
+	- ✅ VoiceOver
+
+17. ¿Cuáles elementos reciben foco del teclado?
+
+	- ✅ Elementos interactivos como button, link, elementos de formularios
+
+18. Todos nuestros elementos deben tener un role agregado para asegurarnos que son accesibles
+
+	- ✅ Falso
+
+19. ¿Cuál principio de WCAG seguimos cuando hacemos nuestro sitio predecible?
+
+	- ✅ Comprensible
+
+20. ¿Cuál de estos atributos se usa para anunciar una instrucción o etiqueta para usuarios de lectores de pantalla?
+
+	- ✅ aria-label
+
+21. ¿Cuáles son los principios de WCAG?
+
+	- ✅ Perceptible, Operable, Comprensible, Robusto.
+
+22. Si tenemos un estilo de hover, debemos pensar también en el estilo de focus.
+
+	- ✅ Verdadero
+
+</details>
+
+✅ 
+🔥
+📌
 📌
